# Visiolingo

python/: .gitignore  openapi.yaml  pyproject.toml  requirements.txt
python/app/: conversation.py  generate_openapi_yaml.py  main.py  scenario.json  scenario_generator.py
swift/: Entity + Extension.swift  HeadsetPositionManager.swift  VisiolingoApp.swift
swift/Assets.xcassets/avatar.imageset/: Contents.json
swift/Assets/3D/: Message.usdz  Person.usdz
swift/Core/: IntroVideoEnv.swift  Level.swift  NetworkUtil.swift  Preferences.swift  VoiceRecorder.swift
swift/Views/: AvatarView.swift  ConversationSetupView.swift  ImmersiveCulturalView.swift  OnboardingGlobePage.swift  OnboardingView.swift
