[tool.poetry]
name = "server"
version = "0.1.0"
description = "FastAPI service for machine‑learning-powered language tutoring."
packages = [
{ include = "app" }
]

[tool.poetry.scripts]
generate-specs = "generate_openapi_yaml:convert"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "0.112.1" }
openai = "^1.40.0"
langchain = "0.2.15"
langchain-openai = "0.1.23"
langgraph = "0.2.44"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"

[virtualenvs]
create = true
in-project = true
path = "./.venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

